Fixed issues with non text files